# 01-rcli

./: .pre-commit-config.yaml  Cargo.toml  cliff.toml  deny.toml  test.rest
assets/: juventus.csv
fixtures/: blake3.key  ed25519.key  ed25519.pub
src/: lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  jwt.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  jwt.rs  mod.rs  text.rs
