[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["sam <linming1007@gmail.com>"]

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_toml = "0.0.1"
serde_yaml = "0.9.34"
zxcvbn = "3.1.0"
