[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["sam <linming1007@gmail.com>"]

[dependencies]
anyhow = "1.0.92"
axum = { version = "0.7.7", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.5.4"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_toml = "0.0.1"
serde_yaml = "0.9.34"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "net", "macros", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zxcvbn = "3.1.0"
